# giggle

./: .gitignore  .project.vim  AUTHORS  Makefile.am  NEWS  README  acinclude.m4  autogen.sh  configure.ac
data/: .gitignore  Makefile.am  giggle.desktop.in  main-window.glade
doc/: symbol-blacklist
help/: Makefile.am  giggle.omf.in
help/C/: giggle.xml
libgiggle/: .gitignore  Makefile.am  giggle-author.c  giggle-author.h  giggle-branch.h  giggle-clipboard.c  giggle-clipboard.h  giggle-configuration.c  giggle-configuration.h  giggle-dispatcher.c  giggle-dispatcher.h  giggle-dummy.c  giggle-enums.c.in  giggle-error.c  giggle-git-add-ref.c  giggle-git-add-ref.h  giggle-git-add.c  giggle-git-authors.c  giggle-git-blame.c  giggle-git-blame.h  giggle-git-cat-file.c  giggle-git-cat-file.h  giggle-git-delete-ref.c  giggle-git-diff-tree.c  giggle-git-diff-tree.h  giggle-git-diff.c  giggle-git-diff.h  giggle-git-ignore.c  giggle-git-list-files.c  giggle-git-list-tree.c  giggle-git-list-tree.h  giggle-git-log.h  giggle-git-read-config.c  giggle-git-read-config.h  giggle-git-remote-list.c  giggle-git-remote-list.h  giggle-git-revisions.c  giggle-git-revisions.h  giggle-git-write-config.c  giggle-git.c  (+24 more)
libgiggle-git/: .gitignore  Makefile.am  giggle-configuration.h  giggle-git-add-ref.c  giggle-git-add-ref.h  giggle-git-add.c  giggle-git-add.h  giggle-git-authors.c  giggle-git-authors.h  giggle-git-blame.c  giggle-git-blame.h  giggle-git-cat-file.c  giggle-git-cat-file.h  giggle-git-commit.c  giggle-git-commit.h  giggle-git-config-read.c  giggle-git-config-read.h  giggle-git-config-write.c  giggle-git-config-write.h  giggle-git-config.c  giggle-git-config.h  giggle-git-delete-ref.c  giggle-git-delete-ref.h  giggle-git-diff-tree.c  giggle-git-diff-tree.h  giggle-git-diff.c  giggle-git-diff.h  giggle-git-enums.c.in  giggle-git-enums.h.in  giggle-git-ignore.c  giggle-git-list-files.c  giggle-git-list-files.h  giggle-git-list-tree.c  giggle-git-list-tree.h  giggle-git-log.c  giggle-git-log.h  giggle-git-read-config.c  giggle-git-read-config.h  giggle-git-refs.c  giggle-git-refs.h  (+8 more)
m4/: .gitignore  giggle.m4
pixmaps/: Makefile.am
plugins/: Makefile.am  giggle-hello-world-plugin.c  giggle-personal-details-plugin.c  giggle-personal-details-window.c  giggle-personal-details-window.h  giggle-view-terminal-plugin.c  giggle-view-terminal.c  giggle-view-terminal.h  hello-world.c  hello-world.h  hello-world.xml  personal-details.xml  terminal-view.xml
po/: .gitignore  LINGUAS  POTFILES.in  POTFILES.skip  ca.po  de.po  en_GB.po  es.po  fr.po  ja.po  pl.po  sv.po  vi.po  zh_CN.po
src/: .gitignore  Makefile.am  eggfindbar.c  gig-main.c  giggle-author.c  giggle-author.h  giggle-authors-view.c  giggle-authors-view.h  giggle-avatar-cache.c  giggle-avatar-cache.h  giggle-avatar-image.c  giggle-avatar-image.h  giggle-branch.c  giggle-branch.h  giggle-branches-view.c  giggle-branches-view.h  giggle-configuration.c  giggle-configuration.h  giggle-description-editor.c  giggle-description-editor.h  giggle-diff-tree-view.c  giggle-diff-tree-view.h  giggle-diff-view.c  giggle-diff-view.h  giggle-diff-window.c  giggle-diff-window.h  giggle-dispatcher.c  giggle-dispatcher.h  giggle-dummy.c  giggle-dummy.h  giggle-enums.h.in  giggle-error.h  giggle-file-list.c  giggle-file-list.h  giggle-git-add.c  giggle-git-add.h  giggle-git-authors.c  giggle-git-authors.h  giggle-git-branches.c  giggle-git-branches.h  (+90 more)
test/: .gitignore  Makefile.am  check-bare.c  multi-root
test/multi-root.git/: FETCH_HEAD  HEAD  ORIG_HEAD  index
test/multi-root.git/logs/: HEAD
test/multi-root.git/logs/refs/heads/: import-other  master  temp
test/multi-root.git/refs/heads/: import-other  master  temp
