ACLOCAL_AMFLAGS = -I m4

SUBDIRS = data pixmaps help libgiggle libgiggle-git plugins src po test

EXTRA_DIST = \
	gnome-doc-utils.make \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in

DISTCLEANFILES = \
	gnome-doc-utils.make \
	intltool-extract \
	intltool-merge \
	intltool-update

DISTCHECK_CONFIGURE_FLAGS = \
	--disable-scrollkeeper

