# See http://live.gnome.org/GnomeDocUtilsCreateNew
include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

# The basename of the docbook file
DOC_MODULE = giggle

# The entities of this manual
DOC_ENTITIES =

# List of documents to include. Paths are relative to the C/ subdir.
DOC_INCLUDES = legal.xml

# List of figures to include.  Paths are relative to the C/ subdir.
DOC_FIGURES = #figures/first_fig.png

